--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,22 @@
   .whatsapp-icon {
     margin-top: 16px;
   }
+
+  .loader {
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    border-top-color: #3498db;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 1s linear infinite;
+  }
+  
+  @keyframes spin {
+    from{
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+  
